--- a/GitUpGuide-master/index.html
+++ b/GitUpGuide-master/index.html
@@ -47,7 +47,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Your Name</h1>
+      <h1>Nandinee Kaushik</h1>
       <p>I'm a <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -82,9 +82,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 14 June 2000</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 88282 73134</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Mumbai, India</li>
                 </ul>
               </div>
@@ -92,7 +92,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelors</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nandinee.kaushik@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -234,21 +234,21 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Your Name</h4>
+              <h4>Nandinee Kaushik</h4>
               <p><em>I care deeply about building software that are usable and helpful for the most number of people possible.</em></p>
               <ul>
                 <li>Mumbai, India</li>
-                <li>(+91) 98765-43210</li>
-                <li>email@example.com</li>
+                <li>(+91) 88282-73134</li>
+                <li>nandinee.kaushik.12@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Engineering, Computer Science</h4>
+              <h4>Bachelor of Engineering, Electronics </h4>
               <h5>Sept 2018 - Present</h5>
               <p><em>Dwarkadas J. Sanghvi College of Engineering, Mumbai</em></p>
-              <p>Current CGPA: 9/10</p>
+              <p>Current CGPA: 7.4/10</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -396,7 +396,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Your Name</h3>
+      <h3>Nandinee Kaushik</h3>
       <p>Eat, Sleep, Code, Repeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -404,7 +404,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Your Name</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Nandinee Kaushik</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
